WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230190
Linker warnings for WKWebViewConfiguration.limitsNavigationsToAppBoundDomains property methods
https://bugs.webkit.org/show_bug.cgi?id=230190
Summary
Linker warnings for WKWebViewConfiguration.limitsNavigationsToAppBoundDomains...
David Kilzer (:ddkilzer)
Reported
2021-09-11 10:49:48 PDT
Linker warnings for WKWebViewConfiguration.limitsNavigationsToAppBoundDomains property methods when building for iOS: ld: warning: method '-limitsNavigationsToAppBoundDomains' in category from WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource25-mm.o overrides method from class in WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource25-mm.o ld: warning: method '-setLimitsNavigationsToAppBoundDomains:' in category from WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource25-mm.o overrides method from class in WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64e/UnifiedSource25-mm.o This happens because the methods are implemented in category WKWebViewConfiguration (WKPrivate), but should be moved to WKWebViewConfiguration since the property was added as API in
r260228
.
Attachments
Patch v1
(2.55 KB, patch)
2021-09-11 10:52 PDT
,
David Kilzer (:ddkilzer)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch v2
(2.55 KB, patch)
2021-09-11 11:56 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-09-11 10:52:53 PDT
Created
attachment 437958
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2021-09-11 11:07:30 PDT
Comment on
attachment 437958
[details]
Patch v1 This needs PLATFORM(IOS) guards.
David Kilzer (:ddkilzer)
Comment 3
2021-09-11 11:56:57 PDT
Created
attachment 437961
[details]
Patch v2
Kate Cheney
Comment 4
2021-09-12 19:39:23 PDT
Comment on
attachment 437961
[details]
Patch v2 r=me
EWS
Comment 5
2021-09-13 10:01:24 PDT
Committed
r282332
(
241600@main
): <
https://commits.webkit.org/241600@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437961
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-09-13 10:02:22 PDT
<
rdar://problem/83060079
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug