Linker warnings for WKWebViewConfiguration.limitsNavigationsToAppBoundDomains property methods <https://webkit.org/b/230190>

Reviewed by Kate Cheney.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration limitsNavigationsToAppBoundDomains]):
(-[WKWebViewConfiguration setLimitsNavigationsToAppBoundDomains:]):
- Move methods from category WKWebViewConfiguration (WKPrivate) to
  @implementation WKWebViewConfiguration to fix the warnings.


Canonical link: https://commits.webkit.org/241600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282332 268f45cc-cd09-0410-ab3c-d52691b4dbfc